C10 Revisted all the way through and Revised model created

--- a/III Models/3 Model C10/3 Feature Selection/1.0.0 Correlation Analysis.ipynb
+++ b/III Models/3 Model C10/3 Feature Selection/1.0.0 Correlation Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_40632\\3105638231.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "# Set max columns to display\n",
@@ -50,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +746,7 @@
        "max      229.082625      6.097294  "
       ]
      },
-     "execution_count": 283,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1177,7 @@
        "4  1.190342 -0.318266  180.7166  179.9338  82.41662  214.5402  "
       ]
      },
-     "execution_count": 286,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1604,7 @@
        "max      101.330587    258.600375  "
       ]
      },
-     "execution_count": 287,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1609,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1665,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1718,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3752,7 +3767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3761,7 +3776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -3819,7 +3834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3838,7 +3853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3854,7 +3869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3875,7 +3890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3890,7 +3905,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3905,7 +3920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -3923,7 +3938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3933,14 +3948,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-03-21 03:10:38.505194\n"
+      "2024-05-05 23:11:33.441543\n"
      ]
     }
    ],
