--- a/III Models/3 Model C10/4 Model Selection/1.0.0 XGB - Benchmarking.ipynb
+++ b/III Models/3 Model C10/4 Model Selection/1.0.0 XGB - Benchmarking.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -138,23 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# # List of columns to exclude to run XGboost feature selection\n",
-        "# exclude_columns = [#'Date',\n",
-        "#                  'C4_pct_Hex', 'HydWtr_Na2O',\n",
-        "#                  'TC55555'  \n",
-        "#                    ]\n",
-        "\n",
-        "# # Create a new DataFrame without the excluded columnsd\n",
-        "# df_All = df_All.drop(columns=exclude_columns)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 11,
       "metadata": {
         "trusted": true
       },
@@ -166,22 +150,95 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "                  Date  425_pct_Al  M_Value  C4_pct_Eth  C4_pct_H2O  \\\n",
+            "0  2012-05-17 09:00:00    6.319560  3.50773    2.554580     22.0531   \n",
+            "1  2012-05-17 10:00:00    6.319915  3.50797    2.555935     22.0557   \n",
+            "2  2012-05-17 12:00:00    6.320970  3.50869    2.560005     22.0636   \n",
+            "3  2012-05-18 08:00:00    6.328690  3.51401    2.540370     22.0604   \n",
+            "4  2012-05-18 09:00:00    6.336060  3.51910    2.514430     22.0484   \n",
+            "\n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Decanol   DI55102   DI55152  \\\n",
+            "0            0.867508    0.670721     3.354160  1.03026  0.965043  0.924515   \n",
+            "1            0.864729    0.671059     3.306475  1.03026  0.965043  0.924515   \n",
+            "2            0.856391    0.672071     3.163420  1.06326  0.965043  0.924515   \n",
+            "3            0.811652    0.674174     2.238130  1.51850  0.971625  0.933431   \n",
+            "4            0.773793    0.675408     1.391475  1.51850  0.971625  0.933431   \n",
+            "\n",
+            "    FC55003    FC55009   FC55552   FC55569  FFC55553  FFC55555    LC90366  \\\n",
+            "0  5308.885  1182.3935  40409.25  6924.645  1.049540  0.751183  15.449150   \n",
+            "1  5308.885  1182.3935  40409.25  6924.645  1.049540  0.751183  15.449150   \n",
+            "2  5308.885  1182.3935  40409.25  6924.645  1.049540  0.751183  15.449150   \n",
+            "3  5297.320   966.1866  40866.28  6918.194  1.050092  0.764579   8.759814   \n",
+            "4  5297.320   966.1866  40866.28  6918.194  1.050092  0.764579   8.759814   \n",
+            "\n",
+            "    LC90368   PI55020   TC55552   TI55021  \n",
+            "0  49.26750 -0.389406  179.0115  213.8740  \n",
+            "1  49.26750 -0.389406  179.0115  213.8740  \n",
+            "2  49.26750 -0.389406  179.0115  213.8740  \n",
+            "3  48.51306 -0.318266  180.7166  214.5402  \n",
+            "4  48.51306 -0.318266  180.7166  214.5402  \n"
+          ]
+        }
+      ],
+      "source": [
+        "# # List of columns to exclude to run XGboost feature selection\n",
+        "exclude_columns = [\n",
+        "                # Round 1\n",
+        "                'TI40050',\n",
+        "                'TC55555',\n",
+        "                'LC55568',\n",
+        "                'LC55557',\n",
+        "                'Al2O3',\n",
+        "                'LC55553',\n",
+        "\n",
+        "                # Round 2\n",
+        "                'FC55576',\n",
+        "                'PI55004',\n",
+        "\n",
+        "                # Round 3 - Excluding this one because OLS and FSF agree, but it wasn't captured by XGB-FS\n",
+        "                'DI55580',\n",
+        "\n",
+        "                #Round 4 - Round 3 dropped another in XGB-FS\n",
+        "                'LC52572'\n",
+        "                \n",
+        "                # 'M_Value',\n",
+        "                # 'FFC55553',\n",
+        "                # 'DI55580',\n",
+        "                # 'Al2O3',\n",
+        "                # 'C4_pct_Hex',\n",
+        "                # 'LC52572'\n",
+        "\n",
+        "                   ]\n",
+        "\n",
+        "# # Create a new DataFrame without the excluded columnsd\n",
+        "df_All = df_All.drop(columns=exclude_columns)\n",
+        "\n",
+        "print(df_All.head())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Index(['Date', '425_pct_Al', 'Al2O3', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
+              "Index(['Date', '425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
               "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'Decanol', 'DI55102',\n",
-              "       'DI55152', 'DI55580', 'FC55003', 'FC55009', 'FC55552', 'FC55569',\n",
-              "       'FC55576', 'FFC55553', 'FFC55555', 'LC52572', 'LC55553', 'LC55557',\n",
-              "       'LC55568', 'LC90366', 'LC90368', 'PI55004', 'PI55020', 'TC55552',\n",
-              "       'TC55555', 'TI40050', 'TI55021'],\n",
+              "       'DI55152', 'FC55003', 'FC55009', 'FC55552', 'FC55569', 'FFC55553',\n",
+              "       'FFC55555', 'LC90366', 'LC90368', 'PI55020', 'TC55552', 'TI55021'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -210,22 +267,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "         425_pct_Al         Al2O3       M_Value    C4_pct_Eth    C4_pct_H2O  \\\n",
-            "count  40127.000000  40127.000000  40127.000000  40127.000000  40127.000000   \n",
-            "mean       6.133716     11.382607      3.597077      1.213887     21.178645   \n",
-            "std        0.228800      0.547831      0.179868      0.691779      2.750323   \n",
-            "min        5.270185      9.740945      1.255950      0.030786      7.714985   \n",
-            "25%        6.003510     11.095875      3.502715      0.621701     18.843125   \n",
-            "50%        6.135865     11.495850      3.588030      1.103350     21.462900   \n",
-            "75%        6.265830     11.719825      3.682920      1.687807     23.275925   \n",
-            "max        7.026215     12.879900      5.827565      9.466675     34.151950   \n",
+            "         425_pct_Al       M_Value    C4_pct_Eth    C4_pct_H2O  \\\n",
+            "count  40127.000000  40127.000000  40127.000000  40127.000000   \n",
+            "mean       6.133716      3.597077      1.213887     21.178645   \n",
+            "std        0.228800      0.179868      0.691779      2.750323   \n",
+            "min        5.270185      1.255950      0.030786      7.714985   \n",
+            "25%        6.003510      3.502715      0.621701     18.843125   \n",
+            "50%        6.135865      3.588030      1.103350     21.462900   \n",
+            "75%        6.265830      3.682920      1.687807     23.275925   \n",
+            "max        7.026215      5.827565      9.466675     34.151950   \n",
             "\n",
             "       HydWtr_pct_Ammonia    C4_pct_Hex   HydWtr_Na2O       Decanol  \\\n",
             "count        40127.000000  40127.000000  40127.000000  40127.000000   \n",
@@ -237,55 +294,35 @@
             "75%              1.028358      0.546428      0.961125      4.110000   \n",
             "max              1.615295      3.075880     13.207450      7.937500   \n",
             "\n",
-            "            DI55102       DI55152       DI55580       FC55003       FC55009  \\\n",
+            "            DI55102       DI55152       FC55003       FC55009       FC55552  \\\n",
             "count  40127.000000  40127.000000  40127.000000  40127.000000  40127.000000   \n",
-            "mean       0.944657      0.932500      0.995820   5994.093426    845.283665   \n",
-            "std        0.051564      0.028840      0.045932    742.541657    589.508802   \n",
-            "min        0.800589      0.838533      0.856118   3139.415000      0.000000   \n",
-            "25%        0.911283      0.913298      0.966101   5543.570000    316.396094   \n",
-            "50%        0.949640      0.932261      0.997270   6012.696250    837.068500   \n",
-            "75%        0.983945      0.951508      1.028886   6500.732500   1315.969375   \n",
-            "max        1.050968      1.018905      1.097149   8672.510000   2613.463750   \n",
+            "mean       0.944657      0.932500   5994.093426    845.283665  36486.326412   \n",
+            "std        0.051564      0.028840    742.541657    589.508802   3951.334785   \n",
+            "min        0.800589      0.838533   3139.415000      0.000000  19012.625000   \n",
+            "25%        0.911283      0.913298   5543.570000    316.396094  35368.618750   \n",
+            "50%        0.949640      0.932261   6012.696250    837.068500  37979.250000   \n",
+            "75%        0.983945      0.951508   6500.732500   1315.969375  39005.593750   \n",
+            "max        1.050968      1.018905   8672.510000   2613.463750  41922.012500   \n",
             "\n",
-            "            FC55552       FC55569       FC55576      FFC55553      FFC55555  \\\n",
+            "            FC55569      FFC55553      FFC55555       LC90366       LC90368  \\\n",
             "count  40127.000000  40127.000000  40127.000000  40127.000000  40127.000000   \n",
-            "mean   36486.326412   6599.626128    370.858532      0.998780      0.772735   \n",
-            "std     3951.334785    367.014122    257.837941      0.035477      0.021626   \n",
-            "min    19012.625000   5131.707500      0.000000      0.816592      0.699112   \n",
-            "25%    35368.618750   6369.194375    177.667663      0.975473      0.759625   \n",
-            "50%    37979.250000   6579.400000    339.463375      0.998639      0.774398   \n",
-            "75%    39005.593750   6807.156250    554.508625      1.019374      0.789170   \n",
-            "max    41922.012500   8022.138750   1052.260000      1.157945      0.846776   \n",
+            "mean    6599.626128      0.998780      0.772735     47.675871     35.828095   \n",
+            "std      367.014122      0.035477      0.021626     28.705725     20.352599   \n",
+            "min     5131.707500      0.816592      0.699112      0.000000      0.118033   \n",
+            "25%     6369.194375      0.975473      0.759625     23.434044     19.092894   \n",
+            "50%     6579.400000      0.998639      0.774398     49.579687     41.075650   \n",
+            "75%     6807.156250      1.019374      0.789170     78.100662     51.454206   \n",
+            "max     8022.138750      1.157945      0.846776     87.901600     81.156950   \n",
             "\n",
-            "            LC52572       LC55553       LC55557       LC55568       LC90366  \\\n",
-            "count  40127.000000  40127.000000  40127.000000  40127.000000  40127.000000   \n",
-            "mean      63.161834     62.999504     69.400947     41.197351     47.675871   \n",
-            "std        2.445296      7.240906      2.824132      1.335602     28.705725   \n",
-            "min       53.787775     41.586562     60.807113     32.715563      0.000000   \n",
-            "25%       61.891900     58.817194     66.885913     41.040700     23.434044   \n",
-            "50%       63.617663     65.116775     70.045363     41.301412     49.579687   \n",
-            "75%       64.966194     68.040581     71.845200     41.528963     78.100662   \n",
-            "max       71.376250     78.009637     76.002050     49.011063     87.901600   \n",
-            "\n",
-            "            LC90368       PI55004       PI55020       TC55552       TC55555  \\\n",
-            "count  40127.000000  40127.000000  40127.000000  40127.000000  40127.000000   \n",
-            "mean      35.828095      2.183178     -1.492794    168.666435    180.991888   \n",
-            "std       20.352599      1.114439      1.099024     15.387186      1.504697   \n",
-            "min        0.118033      0.059388     -4.676100    120.962000    178.587875   \n",
-            "25%       19.092894      1.309336     -2.355557    154.973562    179.973750   \n",
-            "50%       41.075650      1.940014     -1.513371    172.836625    180.053625   \n",
-            "75%       51.454206      2.914896     -0.473816    180.844688    182.000500   \n",
-            "max       81.156950      6.154050      1.227351    198.487625    186.167625   \n",
-            "\n",
-            "            TI40050       TI55021  \n",
-            "count  40127.000000  40127.000000  \n",
-            "mean      73.007114    223.377472  \n",
-            "std       14.326188      9.921505  \n",
-            "min       28.821487    210.532500  \n",
-            "25%       63.021206    217.527125  \n",
-            "50%       76.228938    220.254750  \n",
-            "75%       84.056694    223.953937  \n",
-            "max      101.330587    258.600375  \n"
+            "            PI55020       TC55552       TI55021  \n",
+            "count  40127.000000  40127.000000  40127.000000  \n",
+            "mean      -1.492794    168.666435    223.377472  \n",
+            "std        1.099024     15.387186      9.921505  \n",
+            "min       -4.676100    120.962000    210.532500  \n",
+            "25%       -2.355557    154.973562    217.527125  \n",
+            "50%       -1.513371    172.836625    220.254750  \n",
+            "75%       -0.473816    180.844688    223.953937  \n",
+            "max        1.227351    198.487625    258.600375  \n"
           ]
         }
       ],
@@ -295,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -738,26 +775,15 @@
               "             n_jobs=None, num_parallel_tree=None, ...)"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Assuming your data is in filtered_df and you want to predict 'target_column_name'\n",
-        "X = df_All.drop(['Decanol', 'Date',\n",
-        "                'TI40050',\n",
-        "                'TC55555',\n",
-        "                'LC55568',\n",
-        "                'LC55557',\n",
-        "                'Al2O3',\n",
-        "                'LC55553',\n",
-        "                'M_Value',\n",
-        "                'FFC55553',\n",
-        "                'DI55580',\n",
-        "                'Al2O3',\n",
-        "                'C4_pct_Hex',\n",
-        "                'LC52572',\n",
+        "X = df_All.drop(['Decanol', \n",
+        "                 'Date',\n",
         "                 ], axis=1)  # Replace 'target_column_name' with your target column's name\n",
         "y = df_All['Decanol']\n",
         "\n",
