--- a/III Models/3 Model C4/3 Feature Selection/1.0.2 SFS_contData.ipynb
+++ b/III Models/3 Model C4/3 Feature Selection/1.0.2 SFS_contData.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -11,12 +11,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 2,
       "metadata": {
         "tags": [],
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_23324\\2355519372.py:2: DeprecationWarning: \n",
+            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+            "but was not found to be installed on your system.\n",
+            "If this would cause problems for you,\n",
+            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+            "        \n",
+            "  import pandas as pd\n"
+          ]
+        }
+      ],
       "source": [
         "# Import necessary libraries\n",
         "import pandas as pd\n",
@@ -27,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 3,
       "metadata": {
         "trusted": true
       },
@@ -39,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -48,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -62,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -79,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -95,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -147,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -162,7 +177,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -173,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -185,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -2142,7 +2157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -2216,14 +2231,105 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-19 19:59:03.576395\n"
+            "Selected Features:\n",
+            "Index(['425_pct_Al', 'Al2O3', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
+            "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'DI55102', 'DI55152',\n",
+            "       'DI55580', 'FC55003', 'FC55552', 'FC55569', 'FC55576', 'FFC55553',\n",
+            "       'FFC55555', 'LC52572', 'LC55553', 'LC55557', 'LC55568', 'LC90366',\n",
+            "       'LC90368', 'PI55020', 'TC55552', 'TC55553', 'TC55555', 'TI40050',\n",
+            "       'TI55021'],\n",
+            "      dtype='object')\n",
+            "\n",
+            "Not Selected Features:\n",
+            "['PI55004', 'TI55023']\n",
+            "\n",
+            "Model Coefficients:\n",
+            "425_pct_Al: 1.2862034934065192\n",
+            "Al2O3: -1.091363081958995\n",
+            "M_Value: -0.5779634732594381\n",
+            "C4_pct_Eth: -1.6283673563699688\n",
+            "C4_pct_H2O: 0.27910404532432437\n",
+            "HydWtr_pct_Ammonia: 3.2465894163976703\n",
+            "C4_pct_Hex: -2.4697327520269434\n",
+            "HydWtr_Na2O: -0.9712704139324043\n",
+            "DI55102: 25.135348147032417\n",
+            "DI55152: 8.72514873334768\n",
+            "DI55580: 5.6174341392304505\n",
+            "FC55003: -0.0016875660174987858\n",
+            "FC55552: 0.0004264622127574426\n",
+            "FC55569: -0.0020443081260707275\n",
+            "FC55576: 0.003941210236046944\n",
+            "FFC55553: 14.610290017997476\n",
+            "FFC55555: -30.00732814372559\n",
+            "LC52572: 0.1512446460247208\n",
+            "LC55553: -0.18703605175783822\n",
+            "LC55557: -0.2899774660678551\n",
+            "LC55568: 0.3896290251297587\n",
+            "LC90366: -0.026227200568506803\n",
+            "LC90368: 0.015418043978940591\n",
+            "PI55020: 1.4660457380598801\n",
+            "TC55552: 0.04293255831040908\n",
+            "TC55553: 0.03374296436882327\n",
+            "TC55555: 0.42888084774573393\n",
+            "TI40050: -0.057894789873682385\n",
+            "TI55021: -0.08457958514451226\n",
+            "\n",
+            "R-squared on Training Set: 0.2442392043704842\n",
+            "R-squared on Test Set: 0.23198503257159975\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Get all feature names\n",
+        "all_features = X_train.columns\n",
+        "\n",
+        "# Get the indices of the selected features\n",
+        "selected_indices = list(sfs.k_feature_idx_)\n",
+        "\n",
+        "# Get the names of the selected features\n",
+        "selected_features = X_train.columns[selected_indices]\n",
+        "\n",
+        "# Identify the features that were not selected\n",
+        "not_selected_features = [feature for idx, feature in enumerate(all_features) if idx not in selected_indices]\n",
+        "\n",
+        "# Output the selected and not selected features\n",
+        "print(\"Selected Features:\")\n",
+        "print(selected_features)\n",
+        "\n",
+        "print(\"\\nNot Selected Features:\")\n",
+        "print(not_selected_features)\n",
+        "\n",
+        "# Display the coefficients of the final model\n",
+        "print(\"\\nModel Coefficients:\")\n",
+        "for i, feature in enumerate(selected_features):\n",
+        "    print(f\"{feature}: {final_model.coef_[i]}\")\n",
+        "\n",
+        "# Display the R-squared value for the training set\n",
+        "r_squared_train = final_model.score(X_train[selected_features], y_train)\n",
+        "print(f\"\\nR-squared on Training Set: {r_squared_train}\")\n",
+        "\n",
+        "# Optionally, if you evaluated the model on a test set\n",
+        "r_squared_test = final_model.score(X_test[selected_features], y_test)\n",
+        "print(f\"R-squared on Test Set: {r_squared_test}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2024-05-06 00:02:00.805748\n"
           ]
         }
       ],
