--- a/III Models/3 Model C10/3 Feature Selection/1.0.1 OLS_contData.ipynb
+++ b/III Models/3 Model C10/3 Feature Selection/1.0.1 OLS_contData.ipynb
@@ -2,12 +2,27 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 1,
       "metadata": {
         "tags": [],
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_35800\\3619633928.py:2: DeprecationWarning: \n",
+            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+            "but was not found to be installed on your system.\n",
+            "If this would cause problems for you,\n",
+            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+            "        \n",
+            "  import pandas as pd\n"
+          ]
+        }
+      ],
       "source": [
         "# Import necessary libraries\n",
         "import pandas as pd\n",
@@ -18,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -31,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -45,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -59,33 +74,28 @@
             "3  2012-05-18 08:00:00    6.328690  11.39165  3.51401    2.540370     22.0604   \n",
             "4  2012-05-18 09:00:00    6.336060  11.40500  3.51910    2.514430     22.0484   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Decanol   DI55102   DI55152  \\\n",
-            "0            0.867508    0.670721     3.354160  1.03026  0.965043  0.924515   \n",
-            "1            0.864729    0.671059     3.306475  1.03026  0.965043  0.924515   \n",
-            "2            0.856391    0.672071     3.163420  1.06326  0.965043  0.924515   \n",
-            "3            0.811652    0.674174     2.238130  1.51850  0.971625  0.933431   \n",
-            "4            0.773793    0.675408     1.391475  1.51850  0.971625  0.933431   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Decanol  ...   LC55557  \\\n",
+            "0            0.867508    0.670721     3.354160  1.03026  ...  66.31395   \n",
+            "1            0.864729    0.671059     3.306475  1.03026  ...  66.31395   \n",
+            "2            0.856391    0.672071     3.163420  1.06326  ...  66.31395   \n",
+            "3            0.811652    0.674174     2.238130  1.51850  ...  65.92560   \n",
+            "4            0.773793    0.675408     1.391475  1.51850  ...  65.92560   \n",
             "\n",
-            "    DI55580   FC55003    FC55009   FC55552   FC55569  FC55576  FFC55553  \\\n",
-            "0  1.014885  5308.885  1182.3935  40409.25  6924.645  322.177  1.049540   \n",
-            "1  1.014885  5308.885  1182.3935  40409.25  6924.645  322.177  1.049540   \n",
-            "2  1.014885  5308.885  1182.3935  40409.25  6924.645  322.177  1.049540   \n",
-            "3  1.015146  5297.320   966.1866  40866.28  6918.194  329.701  1.050092   \n",
-            "4  1.015146  5297.320   966.1866  40866.28  6918.194  329.701  1.050092   \n",
+            "    LC55568    LC90366   LC90368   PI55004   PI55020   TC55552   TC55555  \\\n",
+            "0  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "1  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "2  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "3  39.88364   8.759814  48.51306  1.190342 -0.318266  180.7166  179.9338   \n",
+            "4  39.88364   8.759814  48.51306  1.190342 -0.318266  180.7166  179.9338   \n",
             "\n",
-            "   FFC55555   LC52572   LC55553   LC55557   LC55568    LC90366   LC90368  \\\n",
-            "0  0.751183  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750   \n",
-            "1  0.751183  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750   \n",
-            "2  0.751183  66.52320  62.92105  66.31395  40.25250  15.449150  49.26750   \n",
-            "3  0.764579  66.50016  62.23534  65.92560  39.88364   8.759814  48.51306   \n",
-            "4  0.764579  66.50016  62.23534  65.92560  39.88364   8.759814  48.51306   \n",
+            "    TI40050   TI55021  \n",
+            "0  82.96565  213.8740  \n",
+            "1  82.96565  213.8740  \n",
+            "2  82.96565  213.8740  \n",
+            "3  82.41662  214.5402  \n",
+            "4  82.41662  214.5402  \n",
             "\n",
-            "    PI55004   PI55020   TC55552   TC55555   TI40050   TI55021  \n",
-            "0  1.236360 -0.389406  179.0115  179.9940  82.96565  213.8740  \n",
-            "1  1.236360 -0.389406  179.0115  179.9940  82.96565  213.8740  \n",
-            "2  1.236360 -0.389406  179.0115  179.9940  82.96565  213.8740  \n",
-            "3  1.190342 -0.318266  180.7166  179.9338  82.41662  214.5402  \n",
-            "4  1.190342 -0.318266  180.7166  179.9338  82.41662  214.5402  \n"
+            "[5 rows x 32 columns]\n"
           ]
         }
       ],
@@ -97,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -112,7 +122,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -123,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "metadata": {
         "trusted": true
       },
@@ -135,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -152,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -168,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -185,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -198,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -213,7 +223,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -224,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -236,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -254,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -266,8 +276,8 @@
             "Dep. Variable:                Decanol   R-squared:                       0.482\n",
             "Model:                            OLS   Adj. R-squared:                  0.482\n",
             "Method:                 Least Squares   F-statistic:                     1243.\n",
-            "Date:                Thu, 21 Mar 2024   Prob (F-statistic):               0.00\n",
-            "Time:                        03:17:00   Log-Likelihood:                -60030.\n",
+            "Date:                Sun, 05 May 2024   Prob (F-statistic):               0.00\n",
+            "Time:                        23:13:54   Log-Likelihood:                -60030.\n",
             "No. Observations:               40127   AIC:                         1.201e+05\n",
             "Df Residuals:                   40096   BIC:                         1.204e+05\n",
             "Df Model:                          30                                         \n",
@@ -332,7 +342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -363,7 +373,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -382,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -405,14 +415,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-21 03:17:00.860825\n"
+            "2024-05-05 23:13:54.156170\n"
           ]
         }
       ],
