--- a/III Models/3 Model C10/3 Feature Selection/1.0.2 SFS_contData.ipynb
+++ b/III Models/3 Model C10/3 Feature Selection/1.0.2 SFS_contData.ipynb
@@ -21,7 +21,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_60288\\2355519372.py:2: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_37508\\2355519372.py:2: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -2107,6 +2107,95 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Selected Features:\n",
+            "Index(['425_pct_Al', 'Al2O3', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
+            "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'DI55102', 'DI55152',\n",
+            "       'FC55003', 'FC55009', 'FC55552', 'FC55569', 'FC55576', 'FFC55553',\n",
+            "       'FFC55555', 'LC52572', 'LC55553', 'LC55568', 'LC90366', 'LC90368',\n",
+            "       'PI55004', 'PI55020', 'TC55552', 'TC55555', 'TI40050', 'TI55021'],\n",
+            "      dtype='object')\n",
+            "\n",
+            "Not Selected Features:\n",
+            "['DI55580', 'LC55557']\n",
+            "\n",
+            "Model Coefficients:\n",
+            "425_pct_Al: -0.1283522804950389\n",
+            "Al2O3: -0.11867476568376022\n",
+            "M_Value: -1.44874498116115\n",
+            "C4_pct_Eth: -0.18283520179742294\n",
+            "C4_pct_H2O: 0.022335882864707553\n",
+            "HydWtr_pct_Ammonia: -0.47729696170431724\n",
+            "C4_pct_Hex: 0.2932345190838613\n",
+            "HydWtr_Na2O: -0.044750135404388505\n",
+            "DI55102: 0.5265336153331183\n",
+            "DI55152: 4.155042765382263\n",
+            "FC55003: -0.00011361865319652907\n",
+            "FC55009: -0.0009492407288831164\n",
+            "FC55552: 6.523046168447393e-05\n",
+            "FC55569: -0.00019602026859377467\n",
+            "FC55576: -0.00010143900971451504\n",
+            "FFC55553: -6.659496001852079\n",
+            "FFC55555: 1.8319427688503884\n",
+            "LC52572: 0.018485854612332507\n",
+            "LC55553: 0.027325818323249332\n",
+            "LC55568: 0.08726656704343874\n",
+            "LC90366: -0.006452809457566867\n",
+            "LC90368: 0.006417374293225722\n",
+            "PI55004: 0.021375365997682232\n",
+            "PI55020: 0.02988906005929984\n",
+            "TC55552: -0.026194769775814506\n",
+            "TC55555: -0.03364176715931423\n",
+            "TI40050: 0.0043032407193547605\n",
+            "TI55021: -0.00938960899912701\n",
+            "\n",
+            "R-squared on Training Set: 0.4813718101434141\n",
+            "R-squared on Test Set: 0.4835003081005803\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Get all feature names\n",
+        "all_features = X_train.columns\n",
+        "\n",
+        "# Get the indices of the selected features\n",
+        "selected_indices = list(sfs.k_feature_idx_)\n",
+        "\n",
+        "# Get the names of the selected features\n",
+        "selected_features = X_train.columns[selected_indices]\n",
+        "\n",
+        "# Identify the features that were not selected\n",
+        "not_selected_features = [feature for idx, feature in enumerate(all_features) if idx not in selected_indices]\n",
+        "\n",
+        "# Output the selected and not selected features\n",
+        "print(\"Selected Features:\")\n",
+        "print(selected_features)\n",
+        "\n",
+        "print(\"\\nNot Selected Features:\")\n",
+        "print(not_selected_features)\n",
+        "\n",
+        "# Display the coefficients of the final model\n",
+        "print(\"\\nModel Coefficients:\")\n",
+        "for i, feature in enumerate(selected_features):\n",
+        "    print(f\"{feature}: {final_model.coef_[i]}\")\n",
+        "\n",
+        "# Display the R-squared value for the training set\n",
+        "r_squared_train = final_model.score(X_train[selected_features], y_train)\n",
+        "print(f\"\\nR-squared on Training Set: {r_squared_train}\")\n",
+        "\n",
+        "# Optionally, if you evaluated the model on a test set\n",
+        "r_squared_test = final_model.score(X_test[selected_features], y_test)\n",
+        "print(f\"R-squared on Test Set: {r_squared_test}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 13,
       "metadata": {},
       "outputs": [
@@ -2114,7 +2203,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-21 03:28:01.383072\n"
+            "2024-05-05 23:15:50.994293\n"
           ]
         }
       ],
