--- a/III Models/3 Model C10/3 Feature Selection/1.0.5 XGB_contData_iter_reducedlist.ipynb
+++ b/III Models/3 Model C10/3 Feature Selection/1.0.5 XGB_contData_iter_reducedlist.ipynb
@@ -23,7 +23,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_46440\\526159370.py:2: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_28732\\526159370.py:2: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -69,28 +69,28 @@
             "3  2012-05-18 08:00:00    6.328690  11.39165  3.51401    2.540370     22.0604   \n",
             "4  2012-05-18 09:00:00    6.336060  11.40500  3.51910    2.514430     22.0484   \n",
             "\n",
-            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Butanol  ...    LC90366  \\\n",
-            "0            0.867508    0.670721     3.354160  30.3662  ...  15.449150   \n",
-            "1            0.864729    0.671059     3.306475  30.3662  ...  15.449150   \n",
-            "2            0.856391    0.672071     3.163420  30.6785  ...  15.449150   \n",
-            "3            0.811652    0.674174     2.238130  32.6454  ...   8.759814   \n",
-            "4            0.773793    0.675408     1.391475  32.6454  ...   8.759814   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O  Decanol  ...   LC55557  \\\n",
+            "0            0.867508    0.670721     3.354160  1.03026  ...  66.31395   \n",
+            "1            0.864729    0.671059     3.306475  1.03026  ...  66.31395   \n",
+            "2            0.856391    0.672071     3.163420  1.06326  ...  66.31395   \n",
+            "3            0.811652    0.674174     2.238130  1.51850  ...  65.92560   \n",
+            "4            0.773793    0.675408     1.391475  1.51850  ...  65.92560   \n",
             "\n",
-            "    LC90368   PI55004   PI55020   TC55552   TC55553   TC55555   TI40050  \\\n",
-            "0  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "1  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "2  49.26750  1.236360 -0.389406  179.0115  213.9375  179.9940  82.96565   \n",
-            "3  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
-            "4  48.51306  1.190342 -0.318266  180.7166  201.0680  179.9338  82.41662   \n",
+            "    LC55568    LC90366   LC90368   PI55004   PI55020   TC55552   TC55555  \\\n",
+            "0  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "1  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "2  40.25250  15.449150  49.26750  1.236360 -0.389406  179.0115  179.9940   \n",
+            "3  39.88364   8.759814  48.51306  1.190342 -0.318266  180.7166  179.9338   \n",
+            "4  39.88364   8.759814  48.51306  1.190342 -0.318266  180.7166  179.9338   \n",
             "\n",
-            "    TI55021   TI55023  \n",
-            "0  213.8740  212.3085  \n",
-            "1  213.8740  212.3085  \n",
-            "2  213.8740  212.3085  \n",
-            "3  214.5402  212.9866  \n",
-            "4  214.5402  212.9866  \n",
+            "    TI40050   TI55021  \n",
+            "0  82.96565  213.8740  \n",
+            "1  82.96565  213.8740  \n",
+            "2  82.96565  213.8740  \n",
+            "3  82.41662  214.5402  \n",
+            "4  82.41662  214.5402  \n",
             "\n",
-            "[5 rows x 33 columns]\n"
+            "[5 rows x 32 columns]\n"
           ]
         }
       ],
@@ -193,11 +193,11 @@
         {
           "data": {
             "text/plain": [
-              "Index(['Date', '425_pct_Al', 'Al2O3', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
-              "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'Butanol', 'DI55102',\n",
-              "       'DI55152', 'DI55580', 'FC55003', 'FC55552', 'FC55569', 'FC55576',\n",
-              "       'FFC55553', 'FFC55555', 'LC52572', 'LC55557', 'LC90366', 'LC90368',\n",
-              "       'TC55552'],\n",
+              "Index(['Date', '425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
+              "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'Decanol', 'DI55102',\n",
+              "       'DI55152', 'DI55580', 'FC55003', 'FC55009', 'FC55552', 'FC55569',\n",
+              "       'FC55576', 'FFC55553', 'FFC55555', 'LC52572', 'LC90366', 'LC90368',\n",
+              "       'PI55004', 'PI55020', 'TC55552', 'TI55021'],\n",
               "      dtype='object')"
             ]
           },
@@ -286,33 +286,33 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "                                        Feature Rotation             Feature  \\\n",
-            "0      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...          425_pct_Al   \n",
-            "1      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...             LC90368   \n",
-            "2      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...          C4_pct_Hex   \n",
-            "3      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...            FFC55553   \n",
-            "4      [425_pct_Al, LC90368, C4_pct_Hex, FFC55553, Hy...  HydWtr_pct_Ammonia   \n",
-            "...                                                  ...                 ...   \n",
-            "14515  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...             DI55102   \n",
-            "14516  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...            FFC55555   \n",
-            "14517  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...             FC55569   \n",
-            "14518  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...          C4_pct_Hex   \n",
-            "14519  [TC55552, LC90366, 425_pct_Al, LC52572, FC5500...               Al2O3   \n",
+            "                                        Feature Rotation     Feature  \\\n",
+            "0      [425_pct_Al, LC52572, FFC55555, C4_pct_H2O, FF...  425_pct_Al   \n",
+            "1      [425_pct_Al, LC52572, FFC55555, C4_pct_H2O, FF...     LC52572   \n",
+            "2      [425_pct_Al, LC52572, FFC55555, C4_pct_H2O, FF...    FFC55555   \n",
+            "3      [425_pct_Al, LC52572, FFC55555, C4_pct_H2O, FF...  C4_pct_H2O   \n",
+            "4      [425_pct_Al, LC52572, FFC55555, C4_pct_H2O, FF...    FFC55553   \n",
+            "...                                                  ...         ...   \n",
+            "17275  [TI55021, HydWtr_Na2O, M_Value, FFC55555, FFC5...     FC55569   \n",
+            "17276  [TI55021, HydWtr_Na2O, M_Value, FFC55555, FFC5...     DI55102   \n",
+            "17277  [TI55021, HydWtr_Na2O, M_Value, FFC55555, FFC5...     PI55020   \n",
+            "17278  [TI55021, HydWtr_Na2O, M_Value, FFC55555, FFC5...  C4_pct_Eth   \n",
+            "17279  [TI55021, HydWtr_Na2O, M_Value, FFC55555, FFC5...  C4_pct_Hex   \n",
             "\n",
             "       Importance  \n",
-            "0           507.0  \n",
-            "1           340.0  \n",
-            "2           243.0  \n",
-            "3           250.0  \n",
-            "4           312.0  \n",
+            "0           482.0  \n",
+            "1           297.0  \n",
+            "2           218.0  \n",
+            "3           282.0  \n",
+            "4           240.0  \n",
             "...           ...  \n",
-            "14515       197.0  \n",
-            "14516       187.0  \n",
-            "14517       193.0  \n",
-            "14518       166.0  \n",
-            "14519       192.0  \n",
+            "17275       146.0  \n",
+            "17276       180.0  \n",
+            "17277       186.0  \n",
+            "17278       200.0  \n",
+            "17279       212.0  \n",
             "\n",
-            "[14520 rows x 3 columns]\n"
+            "[17280 rows x 3 columns]\n"
           ]
         }
       ],
@@ -354,35 +354,37 @@
           "output_type": "stream",
           "text": [
             "               Feature  Average Importance               Description\n",
-            "0   HydWtr_pct_Ammonia          284.618182                       NaN\n",
-            "1              TC55552          276.412121  DC-551 ALKOX  FD PREHEAT\n",
-            "2          HydWtr_Na2O          266.648485                       NaN\n",
-            "3           C4_pct_H2O          256.862121                       NaN\n",
-            "4              FC55552          255.525758  ALK FD TO HYDR RX DC-551\n",
-            "5           C4_pct_Eth          253.631818                       NaN\n",
-            "6              LC90368          249.543939      FB-658 ALKOXIDE TANK\n",
-            "7              FC55003          246.583333  DA-551 O/H H2O TO DC-551\n",
-            "8              DI55152          245.648485    2ND STG SEPR TO FA-560\n",
-            "9           425_pct_Al          239.277273                       NaN\n",
-            "10             LC55557          238.777273       FA-554 SLURRY LEVEL\n",
-            "11             FC55576          236.889394  CONDENSATE TO DESUPERHTR\n",
-            "12             DI55102          235.024242          HYDROL RX OUTLET\n",
-            "13             FC55569          234.300000    30# STM TO C4 STRIPPER\n",
-            "14             LC90366          234.178788        FB-657 SAO STORAGE\n",
-            "15            FFC55555          225.686364  RECYC BUT/ALKOX FD RATIO\n",
-            "16             M_Value          223.860606                       NaN\n",
-            "17            FFC55553          214.578788  DC551 H2O/ALKOXIDE RATIO\n",
-            "18             DI55580          213.721212  DA-554 BTMS SLURRY TO EX\n",
-            "19               Al2O3          209.865152                       NaN\n",
-            "20          C4_pct_Hex          205.965152                       NaN\n",
-            "21             LC52572          203.401515  FB-554 SLURRY SURGE TANK\n"
+            "0              FC55009          276.120833   STM TO PA-551  RING HTR\n",
+            "1              DI55152          259.355556    2ND STG SEPR TO FA-560\n",
+            "2           C4_pct_H2O          256.068056                       NaN\n",
+            "3              TC55552          250.587500  DC-551 ALKOX  FD PREHEAT\n",
+            "4   HydWtr_pct_Ammonia          250.140278                       NaN\n",
+            "5           C4_pct_Hex          249.422222                       NaN\n",
+            "6              FC55003          248.376389  DA-551 O/H H2O TO DC-551\n",
+            "7              LC90368          247.933333      FB-658 ALKOXIDE TANK\n",
+            "8           425_pct_Al          238.061111                       NaN\n",
+            "9          HydWtr_Na2O          233.173611                       NaN\n",
+            "10             M_Value          225.729167                       NaN\n",
+            "11          C4_pct_Eth          225.602778                       NaN\n",
+            "12            FFC55553          221.815278  DC551 H2O/ALKOXIDE RATIO\n",
+            "13             PI55020          220.531944       DA-554 TOP PRESSURE\n",
+            "14             FC55552          216.576389  ALK FD TO HYDR RX DC-551\n",
+            "15             LC90366          210.947222        FB-657 SAO STORAGE\n",
+            "16             DI55102          208.322222          HYDROL RX OUTLET\n",
+            "17             LC52572          203.558333  FB-554 SLURRY SURGE TANK\n",
+            "18             TI55021          200.859722            STEAM TO DA554\n",
+            "19             DI55580          193.638889  DA-554 BTMS SLURRY TO EX\n",
+            "20             FC55569          182.768056    30# STM TO C4 STRIPPER\n",
+            "21            FFC55555          181.754167  RECYC BUT/ALKOX FD RATIO\n",
+            "22             FC55576          177.130556  CONDENSATE TO DESUPERHTR\n",
+            "23             PI55004          165.526389    DA-554 BOTTOM PRESSURE\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_46440\\3091506829.py:9: SettingWithCopyWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_28732\\3091506829.py:9: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -416,7 +418,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-20 23:50:22.650111\n"
+            "2024-05-05 23:36:46.518126\n"
           ]
         }
       ],
