--- a/III Models/3 Model C10/5 Preprocessing - Slecected Features/Merge Data/1.1.1 IM - Create Dataset .ipynb
+++ b/III Models/3 Model C10/5 Preprocessing - Slecected Features/Merge Data/1.1.1 IM - Create Dataset .ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -12,7 +12,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_21752\\1304120184.py:1: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_41788\\1304120184.py:1: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -79,63 +79,63 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "            DI55102       DI55152       FC55003       FC55009       FC55552  \\\n",
-            "count  53027.000000  53027.000000  53027.000000  53027.000000  53027.000000   \n",
-            "mean       0.944303      0.932747   5965.061647    849.267291  35923.727411   \n",
-            "std        0.053360      0.030279    873.852122    616.121897   5005.788686   \n",
-            "min        0.800002      0.836038   2755.480000      0.000000  18005.000000   \n",
-            "25%        0.910721      0.912076   5443.945000    296.416000  34947.100000   \n",
-            "50%        0.950220      0.932556   5988.890000    838.219000  37956.500000   \n",
-            "75%        0.984479      0.952472   6539.060000   1333.465000  39021.300000   \n",
-            "max        1.106550      1.025180   9181.490000   2674.790000  52000.000000   \n",
+            "            FC55003       FC55009       FC55552       FC55569      FFC55553  \\\n",
+            "count  52974.000000  52974.000000  52974.000000  52974.000000  52974.000000   \n",
+            "mean    5971.598388    838.409551  35721.025258   6589.922506      1.001760   \n",
+            "std      870.091519    612.978542   5287.506602    391.888390      0.038444   \n",
+            "min     2730.450000      0.000000  17775.100000   5119.710000      0.809025   \n",
+            "25%     5446.792500    282.864750  34563.250000   6348.302500      0.977791   \n",
+            "50%     5992.205000    822.585500  37944.800000   6572.995000      0.998927   \n",
+            "75%     6545.882500   1318.387500  39013.300000   6807.497500      1.020570   \n",
+            "max     9207.210000   2674.790000  52000.000000   8126.760000      1.184630   \n",
             "\n",
-            "            FC55569       FC55576      FFC55555       LC90366       LC90368  \\\n",
-            "count  53027.000000  53027.000000  53027.000000  53027.000000  53027.000000   \n",
-            "mean    6596.355555    376.921990      0.772128     46.103877     36.783914   \n",
-            "std      389.413386    258.768936      0.022740     28.964180     20.138593   \n",
-            "min     5123.870000      0.000000      0.689689      0.000000      0.006367   \n",
-            "25%     6359.775000    199.181500      0.758317     20.914450     20.694250   \n",
-            "50%     6577.060000    345.814000      0.773698     47.213100     42.069400   \n",
-            "75%     6810.550000    561.441000      0.788256     76.966300     51.962850   \n",
-            "max     8112.930000   1150.200000      0.854226     87.901600     81.210800   \n",
+            "           FFC55555       LC90366       LC90368       PI55020       TC55552  \\\n",
+            "count  52974.000000  52974.000000  52974.000000  52974.000000  52974.000000   \n",
+            "mean       0.771663     46.213319     36.769280     -1.463556    168.919046   \n",
+            "std        0.023297     28.995961     20.170483      1.136207     15.162359   \n",
+            "min        0.689689      0.000000      0.006367     -4.879980    119.791000   \n",
+            "25%        0.757575     21.103150     20.383225     -2.341388    156.088500   \n",
+            "50%        0.772693     47.420500     42.081500     -1.446005    172.789500   \n",
+            "75%        0.787991     76.996200     52.008050     -0.447425    180.875000   \n",
+            "max        0.860178     87.901600     81.210800      2.030470    202.625000   \n",
             "\n",
-            "            PI55004       PI55020       TC55552       TI55021  \n",
-            "count  53027.000000  53027.000000  53027.000000  53027.000000  \n",
-            "mean       2.178256     -1.466144    168.885993    223.009729  \n",
-            "std        1.176422      1.130865     15.309291      9.712883  \n",
-            "min        0.001366     -4.856830    120.095000    203.525000  \n",
-            "25%        1.254095     -2.340425    155.850000    217.508000  \n",
-            "50%        1.907760     -1.446300    172.838000    220.246000  \n",
-            "75%        2.972360     -0.450221    181.022000    223.843000  \n",
-            "max        6.246540      2.030470    202.625000    258.133000  \n",
-            "         425_pct_Al    C4_pct_Eth    C4_pct_H2O  HydWtr_pct_Ammonia  \\\n",
-            "count  53027.000000  53027.000000  53027.000000        53027.000000   \n",
-            "mean       6.143957      1.229628     21.238209            0.970185   \n",
-            "std        0.256678      0.733113      2.725474            0.151464   \n",
-            "min        5.165900      0.080310      7.667200            0.373360   \n",
-            "25%        6.003590      0.625711     18.932350            0.877254   \n",
-            "50%        6.138070      1.104550     21.520500            0.941828   \n",
-            "75%        6.285380      1.688645     23.298100            1.034630   \n",
-            "max        7.136170      9.844330     35.204300            1.605960   \n",
+            "            TI55021  \n",
+            "count  52974.000000  \n",
+            "mean     223.090083  \n",
+            "std        9.739752  \n",
+            "min      203.525000  \n",
+            "25%      217.507250  \n",
+            "50%      220.303000  \n",
+            "75%      224.061750  \n",
+            "max      258.284000  \n",
+            "         425_pct_Al       M_Value    C4_pct_Eth    C4_pct_H2O  \\\n",
+            "count  52974.000000  52974.000000  52974.000000  52974.000000   \n",
+            "mean       6.145929      3.590823      1.204010     21.209329   \n",
+            "std        0.254818      0.177638      0.689922      2.736472   \n",
+            "min        5.166490      1.346790      0.080310      7.823650   \n",
+            "25%        6.004930      3.500952      0.623293     18.874800   \n",
+            "50%        6.141010      3.586000      1.097130     21.482050   \n",
+            "75%        6.289428      3.678308      1.664685     23.291175   \n",
+            "max        7.132730      5.831770     12.110300     35.204300   \n",
             "\n",
-            "        HydWtr_Na2O  \n",
-            "count  53027.000000  \n",
-            "mean       0.816009  \n",
-            "std        0.710180  \n",
-            "min        0.000000  \n",
-            "25%        0.453602  \n",
-            "50%        0.666588  \n",
-            "75%        0.985669  \n",
-            "max       12.750600  \n",
+            "       HydWtr_pct_Ammonia    C4_pct_Hex   HydWtr_Na2O  \n",
+            "count        52974.000000  52974.000000  52974.000000  \n",
+            "mean             0.971853      0.460160      0.813769  \n",
+            "std              0.153036      0.237620      0.711709  \n",
+            "min              0.366569      0.000000      0.000000  \n",
+            "25%              0.876971      0.341079      0.452479  \n",
+            "50%              0.942500      0.439082      0.666193  \n",
+            "75%              1.036898      0.537769      0.982019  \n",
+            "max              1.606790      3.136940     12.617800  \n",
             "            Decanol\n",
-            "count  53027.000000\n",
-            "mean       3.171270\n",
-            "std        1.651904\n",
+            "count  52974.000000\n",
+            "mean       3.170005\n",
+            "std        1.651467\n",
             "min        0.000000\n",
-            "25%        1.893295\n",
-            "50%        3.036670\n",
-            "75%        4.213330\n",
-            "max        8.510120\n"
+            "25%        1.900000\n",
+            "50%        3.026155\n",
+            "75%        4.205000\n",
+            "max        8.550370\n"
           ]
         }
       ],
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -179,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -200,20 +200,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Index(['Date', 'DI55102', 'DI55152', 'FC55003', 'FC55009', 'FC55552',\n",
-            "       'FC55569', 'FC55576', 'FFC55555', 'LC90366', 'LC90368', 'PI55004',\n",
-            "       'PI55020', 'TC55552', 'TI55021'],\n",
+            "Index(['Date', 'FC55003', 'FC55009', 'FC55552', 'FC55569', 'FFC55553',\n",
+            "       'FFC55555', 'LC90366', 'LC90368', 'PI55020', 'TC55552', 'TI55021'],\n",
             "      dtype='object')\n",
             "Index(['Date', 'Decanol'], dtype='object')\n",
-            "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
-            "       'HydWtr_Na2O'],\n",
+            "Index(['Date', '425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
+            "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O'],\n",
             "      dtype='object')\n"
           ]
         }
@@ -226,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -247,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -275,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -294,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -339,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -361,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -387,40 +386,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "                 Date  425_pct_Al  C4_pct_Eth  C4_pct_H2O  HydWtr_pct_Ammonia  \\\n",
-            "0 2012-05-14 07:00:00     6.26763    2.353670    21.66280            0.519068   \n",
-            "1 2012-05-14 08:00:00     6.26798    2.355025    21.66545            0.553096   \n",
-            "2 2012-05-14 09:00:00     6.26868    2.357740    21.67070            0.621152   \n",
-            "3 2012-05-14 10:00:00     6.26938    2.360455    21.67595            0.667952   \n",
-            "4 2012-05-14 11:00:00     6.27008    2.363170    21.68125            0.693497   \n",
+            "                 Date  425_pct_Al   M_Value  C4_pct_Eth  C4_pct_H2O  \\\n",
+            "0 2012-05-14 07:00:00     6.26763  3.551350    2.353670    21.66280   \n",
+            "1 2012-05-14 08:00:00     6.26798  3.551080    2.355025    21.66545   \n",
+            "2 2012-05-14 09:00:00     6.26868  3.550545    2.357740    21.67070   \n",
+            "3 2012-05-14 10:00:00     6.26938  3.550010    2.360455    21.67595   \n",
+            "4 2012-05-14 11:00:00     6.27008  3.549475    2.363170    21.68125   \n",
             "\n",
-            "   HydWtr_Na2O   Decanol   DI55102   DI55152      FC55003    FC55009  \\\n",
-            "0     1.088680  0.959336  0.966831  0.938799  6332.030000  2512.3700   \n",
-            "1     1.084100  0.959336  0.966831  0.938799  6332.030000  2512.3700   \n",
-            "2     1.074945  0.959336  0.966831  0.938799  6332.030000  2512.3700   \n",
-            "3     1.065790  0.933602  0.965900  0.937601  6191.103333  2329.9600   \n",
-            "4     1.056635  0.907868  0.967110  0.938748  6081.507500  2202.0825   \n",
+            "   HydWtr_pct_Ammonia  C4_pct_Hex  HydWtr_Na2O   Decanol      FC55003  \\\n",
+            "0            0.519068    0.620812     1.088680  0.959336  6332.030000   \n",
+            "1            0.553096    0.621150     1.084100  0.959336  6332.030000   \n",
+            "2            0.621152    0.621824     1.074945  0.959336  6332.030000   \n",
+            "3            0.667952    0.622498     1.065790  0.933602  6191.103333   \n",
+            "4            0.693497    0.623173     1.056635  0.907868  6081.507500   \n",
             "\n",
-            "        FC55552      FC55569     FC55576  FFC55555    LC90366    LC90368  \\\n",
-            "0  41080.000000  6432.660000  386.948500  0.749378  82.124700  60.124100   \n",
-            "1  41080.000000  6432.660000  386.948500  0.749378  82.124700  60.124100   \n",
-            "2  41080.000000  6432.660000  386.948500  0.749378  82.124700  60.124100   \n",
-            "3  40980.433333  6438.553333  391.853667  0.749920  82.121367  60.174033   \n",
-            "4  40679.700000  6438.767500  387.162250  0.750051  82.119700  60.230450   \n",
+            "     FC55009       FC55552      FC55569  FFC55553  FFC55555    LC90366  \\\n",
+            "0  2512.3700  41080.000000  6432.660000  1.000685  0.749378  82.124700   \n",
+            "1  2512.3700  41080.000000  6432.660000  1.000685  0.749378  82.124700   \n",
+            "2  2512.3700  41080.000000  6432.660000  1.000685  0.749378  82.124700   \n",
+            "3  2329.9600  40980.433333  6438.553333  1.003990  0.749920  82.121367   \n",
+            "4  2202.0825  40679.700000  6438.767500  1.001643  0.750051  82.119700   \n",
             "\n",
-            "    PI55004   PI55020    TC55552     TI55021  \n",
-            "0  0.621513  0.013269  146.99950  215.650000  \n",
-            "1  0.621513  0.013269  146.99950  215.650000  \n",
-            "2  0.621513  0.013269  146.99950  215.650000  \n",
-            "3  0.740749  0.018791  148.86200  215.774333  \n",
-            "4  0.897834 -0.021408  150.50375  215.404500  \n"
+            "     LC90368   PI55020    TC55552     TI55021  \n",
+            "0  60.124100  0.013269  146.99950  215.650000  \n",
+            "1  60.124100  0.013269  146.99950  215.650000  \n",
+            "2  60.124100  0.013269  146.99950  215.650000  \n",
+            "3  60.174033  0.018791  148.86200  215.774333  \n",
+            "4  60.230450 -0.021408  150.50375  215.404500  \n"
           ]
         }
       ],
@@ -436,20 +435,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
-              "       'HydWtr_Na2O', 'Decanol', 'DI55102', 'DI55152', 'FC55003', 'FC55009',\n",
-              "       'FC55552', 'FC55569', 'FC55576', 'FFC55555', 'LC90366', 'LC90368',\n",
-              "       'PI55004', 'PI55020', 'TC55552', 'TI55021'],\n",
+              "Index(['Date', '425_pct_Al', 'M_Value', 'C4_pct_Eth', 'C4_pct_H2O',\n",
+              "       'HydWtr_pct_Ammonia', 'C4_pct_Hex', 'HydWtr_Na2O', 'Decanol', 'FC55003',\n",
+              "       'FC55009', 'FC55552', 'FC55569', 'FFC55553', 'FFC55555', 'LC90366',\n",
+              "       'LC90368', 'PI55020', 'TC55552', 'TI55021'],\n",
               "      dtype='object')"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -460,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -475,14 +474,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-25 15:00:39.848747\n"
+            "2024-05-06 01:03:20.346079\n"
           ]
         }
       ],
